--- a/index.html
+++ b/index.html
@@ -21,17 +21,19 @@
                 </p>
             </div>
             <div class="">
-                <img src="../images/background.png" width="500px" height="500px" alt="" class="background">
+                <img src="../images/background.png" width="520px" height="520px" alt="" class="background">
                 <div class="overlay">
-                    <img src="../images/microbit.png" width="300px" height="300px" alt="">
+                    <img src="../images/microbit.png" width="300px" height="300px" style="z-index: 0;">
                 </div>
+            </div>
+            <div class="col-12-home">
+                <button class="button-34" role="button">Explore Feature</button>
             </div>
         </div>
         
     </div>
     
 
-    <footer script-html="footer.html"></footer>
 </body>
 
 <script src="script.js"></script>
