--- a/header.html
+++ b/header.html
@@ -10,9 +10,9 @@
 
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light navbar-white col-12">
-        <h2 class="logo"><img src="../images/logo.png" width="135px" height="45px" alt=""></h2>
-        <ul class="nav ml-auto">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-white col-12" style="z-index: 1;">
+        <h2 class="logo" style="margin-left:200px; margin-top: 30px"><img src="../images/logo.png" width="170px" height="60px" alt=""></h2>
+        <ul class="nav ml-auto" style="margin-right:200px; margin-top: 30px">
             <li class="nav-item">
                 <a class="nav-link" href="mission.html">Our Mission</a>
             </li>
