add header for other pages

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     Whether it's turning off forgotten lights or alerting you to unnecessary power use, Light Slayer ensures your space stays eco-friendly and efficient.
                 </p>
             </div>
-            <div class="">
+            <div>
                 <img src="../images/background.png" width="520px" height="520px" alt="" class="background">
                 <div class="overlay">
                     <img src="../images/microbit.png" width="300px" height="300px" style="z-index: 0;">
