--- a/header.html
+++ b/header.html
@@ -11,7 +11,9 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light navbar-white col-12" style="z-index: 1;">
-        <h2 class="logo" style="margin-left:200px; margin-top: 30px"><img src="../images/logo.png" width="170px" height="60px" alt=""></h2>
+        <a href="index.html">
+            <h2 class="logo" style="margin-left:200px; margin-top: 30px"><img src="../images/logo.png" width="170px" height="60px" alt=""></h2>
+        </a>
         <ul class="nav ml-auto" style="margin-right:200px; margin-top: 30px">
             <li class="nav-item">
                 <a class="nav-link" href="mission.html">Our Mission</a>
