--- a/index.html
+++ b/index.html
@@ -21,13 +21,10 @@
                 </p>
             </div>
             <div>
-                <img src="../images/background.png" width="520px" height="520px" alt="" class="background">
-                <div class="overlay">
-                    <img src="../images/microbit.png" width="300px" height="300px" style="z-index: 0;">
-                </div>
+                <img src="../images/microbit_bg.png" width="520px" height="520px" alt="" class="background">
             </div>
             <div class="col-12-home">
-                <button class="button-34" role="button">Explore Feature</button>
+                <button class="button-34" role="button" style="z-index: 2;">Explore Feature</button>
             </div>
         </div>
         
