features button works

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
                 </p>
             </div>
             <div>
-                <img src="../images/microbit_bg.png" width="520px" height="520px" alt="" class="background">
+                <img src="../images/bg_mb.png" width="520px" height="520px" alt="" class="background">
             </div>
             <div class="col-12-home">
-                <button class="button-34" role="button" style="z-index: 2;">Explore Feature</button>
+                <a href="features.html">
+                    <button href="features.html" class="button-34" role="button">Explore Feature</button>
+                </a>
             </div>
         </div>
         
